# fastapi_websocket_chatting

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
deployments/: development.dockerfile  production.dockerfile
haproxy/: haproxy.cfg
nginx/: nginx.conf
requirements/: linux.requirements.txt  windows.requirements.txt
static/: scripts.js  styles.css
templates/: chatting.jinja
