[tool.poetry]
name = "fastapi-websocket-chatting"
version = "0.1.0"
description = "fastapi websocket chatting"
authors = ["belajarqywok <belajarqywok@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
websockets = "^12.0"
jinja2 = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
